--- a/src/pug/_template.pug
+++ b/src/pug/_template.pug
@@ -41,5 +41,6 @@ html(lang="ru")
   body
     block content
 
+    include elements/popup
     include elements/back2top
     include sections/scripts
