--- a/src/pug/sections/profile-header.pug
+++ b/src/pug/sections/profile-header.pug
@@ -24,10 +24,10 @@
           .profile-header__icons-counter
             span 22
       li.profile-header__icons-item
-        a(href="#").profile-header__icons-link.profile-header__icons-link--hat
+        a(href="#popup-form-regist").profile-header__icons-link.profile-header__icons-link--hat.popup-open
           +svg('hat')
       li.profile-header__icons-item
-        a(href="#").profile-header__icons-link.profile-header__icons-link--info
+        a(href="#popup-form").profile-header__icons-link.profile-header__icons-link--info.popup-open
           +svg('info')
     //end profile-header__icons-list
 
