--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -14,7 +14,7 @@
 @import 'elements/profile-aside-friends';
 @import 'elements/breadcrumbs';
 //@import 'elements/pagination';
-//@import 'elements/popup';
+@import 'elements/popup';
 @import 'elements/slickBase';
 
 //sections
