did popup & enter btn

--- a/src/pug/sections/profile-header-stranger.pug
+++ b/src/pug/sections/profile-header-stranger.pug
@@ -3,7 +3,7 @@
   .container
     //begin profile-header__enter
     section.profile-header__enter
-      button.btn.btn--white Войти
+      button.btn.btn--light Войти
     //end   profile-header__enter
 
 //end   profile-header
