--- a/src/style/core/_base.scss
+++ b/src/style/core/_base.scss
@@ -256,3 +256,14 @@ ol > *:not(li) {
     background-color: $highlight-v;
   }
 }
+
+.btn--light {
+  color: #1e1e1e;
+  border: 1px solid #fff;
+  background-color: #fff;
+  &:hover {
+    color: $light;
+    border: 1px solid $light;
+    background-color: transparent;
+  }
+}
