did teachers page

--- a/src/pug/sections/profile-top-teacher.pug
+++ b/src/pug/sections/profile-top-teacher.pug
@@ -2,7 +2,7 @@
 .profile-top-teacher(style="background-image:url('assets/img/bg-teacher.jpg')")
   .container
     //begin breadcrumbs
-    section.breadcrumbs
+    .breadcrumbs
       ul.breadcrumbs__list
         li.breadcrumbs__item
           a.breadcrumbs__link(href="#") Главная
