--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -13,7 +13,7 @@
 @import 'elements/profile-aside-progress';
 @import 'elements/profile-aside-friends';
 @import 'elements/breadcrumbs';
-//@import 'elements/pagination';
+@import 'elements/pagination';
 @import 'elements/popup';
 @import 'elements/slickBase';
 
@@ -42,3 +42,4 @@
 @import 'pages/profile-friends';
 @import 'pages/profile-new-article';
 @import 'pages/profile-teacher';
+@import 'pages/teachers';
