--- a/src/style/core/_base.scss
+++ b/src/style/core/_base.scss
@@ -168,7 +168,7 @@ ol > *:not(li) {
   height: 100%;
   min-height: 100vh;
 
-  //свойство для плавной прокрутки на яблоках
+//свойство для плавной прокрутки на яблоках
 
   -webkit-overflow-scrolling: touch;
 }
@@ -185,15 +185,15 @@ ol > *:not(li) {
   margin: 0 auto;
   padding: 0 55px;
 
-  @include max(1024) {
+@include max(1024) {
     padding: 0 30px;
   }
 
-  @include max(768) {
+@include max(768) {
     padding: 0 20px;
   }
 
-  @include max(425) {
+@include max(425) {
     padding: 0 10px;
   }
 }
@@ -265,5 +265,38 @@ ol > *:not(li) {
     color: $light;
     border: 1px solid $light;
     background-color: transparent;
+  }
+}
+
+.checkbox {
+  label {
+    position: relative;
+    padding-left: 27px;
+    cursor: pointer;
+
+    &::before {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 16px;
+      height: 16px;
+      content: '';
+      border: 4px solid #f0f0f5;
+      background-color: #f0f0f5;
+    }
+  }
+  &.active {
+    label::before{
+      background-image: url('../img/check.svg');
+    }
+  }
+  input {
+    opacity: 0;
+    position: absolute;
+  }
+  span {
+    color: #1e1e1e;
+    font-size: 14px;
+    font-weight: 300;
   }
 }
