--- a/src/style/elements/_pagination.scss
+++ b/src/style/elements/_pagination.scss
@@ -1,62 +1,73 @@
 .pagination {
   display: flex;
-  padding: 10px 0;
-  text-align: center;
-
   justify-content: center;
+  width: 100%;
+  padding: 5px 0 20px 0;
+  text-align: center;
 }
+
 .pagination__list {
   display: flex;
+  align-items: center;
   margin: 0;
   padding: 0;
-
-  align-items: center;
 }
+
 .pagination__item {
-  margin: 0 5px;
   list-style: none;
 }
+
 .pagination__link {
+  font-size: 16px;
+  font-weight: 300;
   display: block;
-  padding: 3px 6px;
-  transition: .5s;
+  min-width: 28px;
+  padding: 0 5px;
+  transition: all .5s;
+  text-align: center;
   text-decoration: none;
-  color: #363636;
-  border: 1px solid transparent;
-  &.active {
-    color: #fff;
-    background-color: #824b75;
-    &:hover {
-      color: #fff;
-    }
+  color: #99a1ba;
+
+  @include max(375) {
+    min-width: 20px;
   }
-  &.inactive {
+  &.active {
+    font-weight: 500;
     pointer-events: none;
+    color: #1e1e1e;
   }
   &:hover {
-    color: #824b75;
-    border: 1px solid #824b75;
+    color: #1e1e1e;
   }
 }
+
 .pagination-arr__left,
 .pagination-arr__right {
-  position: relative;
-  .pagination__link {
-    border: none;
-  }
   svg {
-    display: block;
-    width: 20px;
-    height: 20px;
-    margin: auto;
+    fill: #99a1ba;
+    width: 40px;
+    height: 40px;
     transition: fill .5s;
-
-    fill: #824b75;
     &:hover {
-      fill: #501743;
+      fill: $highlight-v;
     }
   }
 }
+
 .pagination-arr__left {
-  transform: rotate(180deg);
+  margin-right: 20px;
+  transform: rotate(-90deg);
+
+  @include max(375) {
+    margin-right: 10px;
+  }
+}
+
+.pagination-arr__right {
+  margin-left: 20px;
+  transform: rotate(90deg);
+
+  @include max(375) {
+    margin-left: 10px;
+  }
 }
