--- a/src/style/pages/_teachers.scss
+++ b/src/style/pages/_teachers.scss
@@ -33,6 +33,7 @@
 
   @include max(760) {
     width: 100%;
+    margin-right: 0;
   }
 }
 
@@ -61,7 +62,6 @@
   background-position: calc(100% - 15px) 50%;
 
   appearance: none;
-
   @include placeholder-color(#99a1ba);
 }
 
@@ -118,9 +118,8 @@
 
 .teachers-item--recommend {
   &::before {
-    transform: rotate(60deg);
     background-color: #fc4c3b;
-    background-image: url('../img/recommend.png');
+    background-image: url('../img/recommend-2.png');
   }
 }
 
@@ -215,7 +214,6 @@
 
 .teachers-item__footer {
   display: flex;
-
   //justify-content: space-between;
   flex-wrap: wrap;
   .btn {
