did course-top section

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -32,6 +32,7 @@
 @import 'sections/profile-article-header';
 @import 'sections/profile-all-info';
 @import 'sections/profile-edit';
+@import 'sections/course-top';
 
 //pages
 @import 'pages/index';
