--- a/src/style/core/_base.scss
+++ b/src/style/core/_base.scss
@@ -185,15 +185,15 @@ ol > *:not(li) {
   margin: 0 auto;
   padding: 0 55px;
 
-@include max(1024) {
+  @include max(1024) {
     padding: 0 30px;
   }
 
-@include max(768) {
+  @include max(768) {
     padding: 0 20px;
   }
 
-@include max(425) {
+  @include max(425) {
     padding: 0 10px;
   }
 }
@@ -210,6 +210,7 @@ ol > *:not(li) {
   cursor: pointer;
   transition: all .5s;
   text-align: center;
+  white-space: nowrap;
   text-decoration: none;
   color: #4d4ce0;
   border: 1px solid $highlight-v;
@@ -286,17 +287,17 @@ ol > *:not(li) {
     }
   }
   &.active {
-    label::before{
+    label::before {
       background-image: url('../img/check.svg');
     }
   }
   input {
-    opacity: 0;
     position: absolute;
+    opacity: 0;
   }
   span {
-    color: #1e1e1e;
     font-size: 14px;
     font-weight: 300;
+    color: #1e1e1e;
   }
 }
