--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -33,6 +33,9 @@
 @import 'sections/profile-all-info';
 @import 'sections/profile-edit';
 @import 'sections/course-top';
+@import 'sections/course-about';
+@import 'sections/course-schedule';
+@import 'sections/course-banner';
 
 //pages
 @import 'pages/index';
