did course page

--- a/src/pug/pages/course.pug
+++ b/src/pug/pages/course.pug
@@ -78,6 +78,8 @@ block content
         //end profile-teacher__reviews-t-slider
 
 
+      include ../sections/course-questions
+
       .container.profile-teacher-courses
         h3.profile-teacher__section-title Похожие курсы
         //begin profile-teacher__courses
