--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -36,6 +36,7 @@
 @import 'sections/course-about';
 @import 'sections/course-schedule';
 @import 'sections/course-banner';
+@import 'sections/course-questions';
 
 //pages
 @import 'pages/index';
