add new labels for teachers

--- a/src/pug/pages/teachers.pug
+++ b/src/pug/pages/teachers.pug
@@ -81,7 +81,7 @@ block content
 
           //begin teachers-list
           .teachers-list
-            +teachers-item('01', 'Петр Максимов', '')
+            +teachers-item('01', 'Петр Максимов', 'teachers-item--chosen')
             +teachers-item('02', 'Анна Иванова', 'teachers-item--recommend')
             +teachers-item('01', 'Петр Максимов', 'teachers-item--exclusive')
             +teachers-item('02', 'Анна Иванова', '')
