--- a/src/pug/pages/profile-edit.pug
+++ b/src/pug/pages/profile-edit.pug
@@ -36,7 +36,7 @@ block content
               ul.profile-aside__menu-list
                 +profile-aside__menu-item('paper', 'Основная информация', 'active')
                 +profile-aside__menu-item('hat', 'Образование','')
-                +profile-aside__menu-item('lock', 'Личная информация','')
+                +profile-aside__menu-item('personal', 'Личная информация','')
                 +profile-aside__menu-item('invite', 'Пригласить друга','')
                 +profile-aside__menu-item('wallet', 'Мой счет','')
             //end profile-aside__menu
