--- a/src/style/core/_base.scss
+++ b/src/style/core/_base.scss
@@ -258,7 +258,7 @@ ol > *:not(li) {
   }
 }
 
-.btn--light {
+.btn--enter {
   color: #1e1e1e;
   border: 1px solid #fff;
   background-color: #fff;
