--- a/src/style/elements/_profile-aside-menu.scss
+++ b/src/style/elements/_profile-aside-menu.scss
@@ -80,6 +80,11 @@
   height: 19px;
 }
 
+.profile-aside__menu-svg--personal svg {
+  width: 20px;
+  height: 16px;
+}
+
 .profile-aside__menu-text {
   font-size: 15px;
   font-weight: 400;
