--- a/src/style/pages/_teachers.scss
+++ b/src/style/pages/_teachers.scss
@@ -157,6 +157,12 @@
   }
 }
 
+.teachers-item__info {
+  a {
+    text-decoration: none;
+  }
+}
+
 .teachers-item__rating {
   display: flex;
   align-items: center;
