--- a/src/style/elements/_back2top.scss
+++ b/src/style/elements/_back2top.scss
@@ -4,13 +4,9 @@
   bottom: 20px;
   display: none;
   cursor: pointer;
+  transition: opacity .5s;
   &:hover {
-    svg {
-      fill: $highlight-r;
-    }
-    .back2top__text {
-      color: $highlight-r;
-    }
+    opacity: .6;
   }
 }
 
