did courses over top section

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -37,6 +37,7 @@
 @import 'sections/course-schedule';
 @import 'sections/course-banner';
 @import 'sections/course-questions';
+@import 'sections/courses-over-top';
 
 //pages
 @import 'pages/index';
