--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -38,6 +38,7 @@
 @import 'sections/course-banner';
 @import 'sections/course-questions';
 @import 'sections/courses-over-top';
+@import 'sections/courses-top';
 
 //pages
 @import 'pages/index';
