did courses page

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -39,6 +39,8 @@
 @import 'sections/course-questions';
 @import 'sections/courses-over-top';
 @import 'sections/courses-top';
+@import 'sections/courses-filter';
+@import 'sections/courses-list';
 
 //pages
 @import 'pages/index';
