add odnoklassniky icon

--- a/src/pug/elements/popup.pug
+++ b/src/pug/elements/popup.pug
@@ -25,6 +25,8 @@
             +svg('yandex')
           a.popup__social-icon.popup__social-icon--gmail(href='#')
             +svg('google')
+          a.popup__social-icon.popup__social-icon--odnok(href='#')
+            +svg('odnok')
         p.popup__social-text Не беспокойтесь, мы ничего не публикуем без вашего разрешения
       .popup__input__agree
         input#agree1.popup__input__checkbox(type='checkbox', name='agree', value='yes')
