--- a/src/style/elements/_popup.scss
+++ b/src/style/elements/_popup.scss
@@ -199,6 +199,11 @@
   height: 16px;
 }
 
+.popup__social-icon--odnok svg {
+  width: 12px;
+  height: 20px;
+}
+
 .popup__social-icon:hover {
   background-color: #5e62d7;
 }
