--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -41,6 +41,7 @@
 @import 'sections/courses-top';
 @import 'sections/courses-filter';
 @import 'sections/courses-list';
+@import 'sections/my-courses-list';
 
 //pages
 @import 'pages/index';
