--- a/src/style/sections/_courses-over-top.scss
+++ b/src/style/sections/_courses-over-top.scss
@@ -1,3 +1,4 @@
+
 .courses-over-top {
   padding-top: 15px;
   .breadcrumbs {
@@ -11,6 +12,12 @@
         color: #1e1e1e;
       }
     }
+  }
+}
+
+.my-courses-over-top {
+  .courses-over-top__row {
+    margin-bottom: 0;
   }
 }
 
