--- a/src/pug/sections/profile-article-footer.pug
+++ b/src/pug/sections/profile-article-footer.pug
@@ -2,7 +2,7 @@
 footer.profile-article__footer
   form.profile-article__form
     .profile-article__form-input-wrap
-      input(placeholder='Написать комментарий').profile-article__form-input
+      textarea(placeholder='Написать комментарий').profile-article__form-textarea
       .profile-article__form-photo
         +svg('photo')
       .profile-article__form-smile
