--- a/src/style/sections/_profile-top.scss
+++ b/src/style/sections/_profile-top.scss
@@ -2,6 +2,7 @@
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: cover;
+  background-image: linear-gradient(to top, #000000 0%, rgba(66, 64, 251, 0) 100%);
   .container {
     display: flex;
     min-height: 330px;
