--- a/src/pug/sections/profile-article-comment.pug
+++ b/src/pug/sections/profile-article-comment.pug
@@ -1,5 +1,5 @@
 //begin profile-article__comment
-.profile-article__comment
+.profile-article__comment.profile-article__comment-1
   header.profile-article__comment-header
     .profile-article__comment-ava
       img(src="assets/img/aside-friends/friend-01.jpg" alt="ava")
