--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -42,6 +42,8 @@
 @import 'sections/courses-filter';
 @import 'sections/courses-list';
 @import 'sections/my-courses-list';
+@import 'sections/my-course-aside';
+@import 'sections/my-course-body-tabs';
 
 //pages
 @import 'pages/index';
