--- a/src/style/pages/_profile-teacher.scss
+++ b/src/style/pages/_profile-teacher.scss
@@ -50,6 +50,14 @@
   padding: 20px;
   border-radius: 5px;
   background-color: #fff;
+    iframe{
+      display: block;
+      width: 100%;
+      margin-bottom: 17px;
+      border-radius: 5px;
+      min-height: 350px;
+    }
+
   p {
     margin-bottom: 24px;
   }
@@ -60,46 +68,6 @@
   font-size: 25px;
   font-weight: 500;
   color: #1e1e1e;
-}
-
-.profile-teacher-about__video {
-  position: relative;
-  overflow: hidden;
-  border-radius: 5px;
-  iframe {
-    display: block;
-    width: 100%;
-    height: 350px;
-  }
-  &.active {
-    .profile-teacher-about__video-cover {
-      pointer-events: none;
-      opacity: 0;
-    }
-  }
-}
-
-.profile-teacher-about__video-cover {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  margin: auto;
-  transition: opacity .5s;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: auto, cover;
-  svg {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: 57px;
-    height: 40px;
-    margin: auto;
-  }
 }
 
 //end about
@@ -446,38 +414,13 @@
 
 .profile-teacher__reviews-slide {
   padding: 0 15px;
-}
-
-.profile-teacher__reviews-iframe {
-  position: relative;
-  overflow: hidden;
-  height: 230px;
-  margin-bottom: 17px;
-  border-radius: 5px;
-  iframe {
+  iframe{
     display: block;
     width: 100%;
-    height: 100%;
+    margin-bottom: 17px;
+  border-radius: 5px;
+    min-height: 230px;
   }
-  &.active {
-    .profile-teacher__reviews-video-cover {
-      pointer-events: none;
-      opacity: 0;
-    }
-  }
-}
-
-.profile-teacher__reviews-video-cover {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  margin: auto;
-  transition: opacity .5s;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: auto, cover;
 }
 
 .profile-teacher__reviews-text {
@@ -490,7 +433,6 @@
     color: #1e1e1e;
   }
 }
-
 //end reviews
 
 //begin text reviews
