--- a/src/style/sections/_my-course-body-tabs.scss
+++ b/src/style/sections/_my-course-body-tabs.scss
@@ -184,37 +184,57 @@
   margin-bottom: 25px;
   padding-bottom: 27px;
   border-bottom: 1px solid #e4e4f2;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .my-course-body-tabs__materials-link {
   font-size: 18px;
   font-weight: 300;
   line-height: 38px;
-  display: block;
+  position: relative;
+  display: inline-block;
   min-height: 26px;
   padding-left: 50px;
   text-decoration: none;
   color: #1e1e1e;
-  background-repeat: no-repeat;
-  background-position: 0 0;
+  @include max(425) {
+    font-size: 16px;
+    padding-left: 40px;
+  }
+  &:hover {
+    color: #1e1e1e;
+  }
+  &::before {
+    position: absolute;
+    top: 5px;
+    left: 0;
+    width: 26px;
+    height: 26px;
+    content: '';
+    background-image: url('../img/materials.png');
+    background-repeat: no-repeat;
+    background-position: 0 0;
+  }
 }
 
 .my-course-body-tabs__materials-link--pdf {
-  background-image: url('../img/pdf.svg');
+  background-position: 0 0;
 }
 
-.my-course-body-tabs__materials-link--excel {
-  background-image: url('../img/excel.svg');
+.my-course-body-tabs__materials-link--excel::before {
+  background-position: 0 -38px;
 }
 
-.my-course-body-tabs__materials-link--word {
-  background-image: url('../img/word.svg');
+.my-course-body-tabs__materials-link--word::before {
+  background-position: 0 -76px;
 }
 
-.my-course-body-tabs__materials-link--img {
-  background-image: url('../img/img.svg');
+.my-course-body-tabs__materials-link--img::before {
+  background-position: 0 -114px;
 }
 
-.my-course-body-tabs__materials-link--video {
-  background-image: url('../img/video.svg');
+.my-course-body-tabs__materials-link--video::before {
+  background-position: 0 -152px;
 }
